--- a/T21/T21Modules/List.xctemplate/___FILEBASENAME___View.xib
+++ b/T21/T21Modules/List.xctemplate/___FILEBASENAME___View.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="___FILEBASENAMEASIDENTIFIER___View" customModule="MyApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="___VARIABLE_productName:identifier___View" customModule="MyApp" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="xzh-dD-86b" id="Zvh-wQ-SdC"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
